--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  height: 100vh;
+  height: 160vh;
   background: linear-gradient(180deg, #04176b 0%, rgba(103, 16, 103, 0) 100%), #4E018A;
 
 }
@@ -56,6 +56,38 @@ h3 {
   height: 20px;
   left: -10px;
   top: 350px;
+  white-space: nowrap;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: small;
+  line-height: 30px;
+
+  color: #ffffff;
+}
+
+h4 {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  left: -10px;
+  top: 550px;
+  white-space: nowrap;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: small;
+  line-height: 30px;
+
+  color: #ffffff;
+}
+
+h5 {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  left: -10px;
+  top: 750px;
   white-space: nowrap;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: normal;
