--- a/index.css
+++ b/index.css
@@ -1,126 +1,73 @@
 body {
   text-align: center;
-  height: 185vh;
-  background: linear-gradient(180deg, #04176b 0%, rgba(103, 16, 103, 0) 100%), #4E018A;
-
-}
-h1 {
-  position: absolute;
-  width: 100px;
-  height: 150px;
-  left: 530px;
-  top: 1px;
-
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 50px;
-  line-height: 116px;
-
-  color: #FFFFFF;
-}
-b {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 65px;
-  top: 175px;
-  white-space: nowrap;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-style: normal;
-  font-weight: 750;
-  font-size: 30px;
-  line-height: 30px;
-
-  color: #FFFFFF;
-}
-h2 {
-  position: relative;
-  width: 20px;
-  height: 20px;
-  left: -10px;
-  top: 170px;
-  white-space: nowrap;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: small;
-  line-height: 30px;
-
-  color: #ffffff;
-}
-
-h3 {
-  position: relative;
-  width: 20px;
-  height: 20px;
-  left: -10px;
-  top: 370px;
-  white-space: nowrap;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: small;
-  line-height: 30px;
-
-  color: #ffffff;
-}
-
-h4 {
-  position: relative;
-  width: 20px;
-  height: 20px;
-  left: -10px;
-  top: 570px;
-  white-space: nowrap;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: small;
-  line-height: 30px;
-
-  color: #ffffff;
-}
-
-h5 {
-  position: relative;
-  width: 20px;
-  height: 20px;
-  left: -10px;
-  top: 770px;
-  white-space: nowrap;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: small;
-  line-height: 30px;
-
-  color: #ffffff;
-}
-
-hr {
-  position: absolute;
-  top: 360px;
-  left: 125px;
-}
-
-hr {
-  size: 2%;
-  width: 50%;
-  color: white;
-}
-
-.footer {
-  position: relative;
-  left: 0;
-  bottom: 100px;
+  height: 100%;
   width: 100%;
-  height: 1vh;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  text-align: center;
-  font-size: 19px;
-  border-top-width: 1px;
-  border-bottom-width: 0px;
-  border-left-width: 0px;
-  border-right-width: 0px;
+  background: linear-gradient(180deg, #faf3e8 0%, rgba(103, 16, 103, 0) 100%), #ffffff;
+}
+
+a:link, a:visited {
+  color: rgb(0, 0, 0);
+  text-decoration: none; 
+}
+
+a:hover, a:active {
+  color: rgb(0, 0, 0);
+}
+
+a.button {
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: #000000; 
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+a.button:hover {
+  background-color: #23b85e; 
+}
+
+.index-container, .tekst-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.div-class0, .div-class1, .div-class2, .div-class3 {
+  flex: 1;  /* Equal width and space distribution */
+  display: flex;
+  justify-content: center;  /* Center content horizontally */
+  align-items: center;      /* Center content vertically */
+  
+}
+
+.div-tekst0, .div-tekst1, .div-tekst2, .div-tekst3 {
+  flex: 1;  /* Match the layout with the image divs */
+  text-align: center;  /* Ensure text is centered */
+  font-size: larger;
+  margin: 10px auto;
+}
+
+.form {
+  position: relative;
+  margin: 30px auto;
+  padding: 35px 0;
+  border: 1.75px solid #827467;
+  border-radius: 8px;
+  width: 800px;
+  background-color: white;
+  padding-left: 25px;
+  padding-right: 25px;
+  font-size: large;
+}
+
+p {
+text-align: left;
+}
+
+h1 {
+  font-family: 'Open sans', sans-serif; /* Specifies the font family */
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
